# yr-weather

./: .pylintrc  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  test.yml
docs/: base.rst  client.rst  conf.py  gettingstarted.rst  index.rst  requirements.txt  submodules.rst
docs/geosatellite/: api.rst  examples.rst  index.rst  types.rst
docs/locationforecast/: api.rst  compactforecast.rst  completeforecast.rst  examples.rst  index.rst  locationforecast.rst
docs/radar/: api.rst  examples.rst  index.rst  radar.rst  types.rst
docs/sunrise/: api.rst  examples.rst  index.rst  types.rst
docs/textforecast/: api.rst  examples.rst  index.rst  textforecast.rst  types.rst
tests/: test_client.py  test_geosatellite.py  test_locationforecast.py  test_radar.py  test_sunrise.py  test_textforecast.py
yr_weather/: __init__.py  base.py  client.py  compactforecast.py  geosatellite.py  locationforecast.py  radar.py  radarliterals.py  sunrise.py  textforecast.py  textforecasttypes.py
yr_weather/api_types/: __init__.py  geosatellite.py  locationforecast.py  radar.py  sunrise.py  textforecast.py
yr_weather/data/: locationforecast.py  radar.py  sunrise.py  textforecast.py
yr_weather/types/: __init__.py  compactforecast.py  completeforecast.py  geosatellite.py  radar.py  sunrise.py  textforecast.py
